UI improvements: Add health sync services, new components, and update screens

--- a/app.json
+++ b/app.json
@@ -23,10 +23,69 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.sleepfactor.app"
+      "package": "com.sleepfactor.app",
+      "permissions": [
+        "android.permission.health.READ_SLEEP",
+        "android.permission.health.READ_STEPS",
+        "android.permission.health.READ_HEART_RATE",
+        "android.permission.health.READ_ACTIVE_CALORIES_BURNED",
+        "android.permission.health.READ_TOTAL_CALORIES_BURNED",
+        "android.permission.health.READ_EXERCISE",
+        "android.permission.health.READ_RESPIRATORY_RATE",
+        "android.permission.health.READ_BLOOD_GLUCOSE",
+        "android.permission.health.READ_BLOOD_PRESSURE",
+        "android.permission.health.READ_BODY_TEMPERATURE",
+        "android.permission.health.READ_OXYGEN_SATURATION",
+        "android.permission.health.READ_WEIGHT",
+        "android.permission.health.READ_HEIGHT",
+        "android.permission.health.READ_BODY_FAT",
+        "android.permission.health.READ_RESTING_HEART_RATE"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-health-connect",
+        {
+          "permissions": [
+            "android.permission.health.READ_SLEEP",
+            "android.permission.health.READ_STEPS",
+            "android.permission.health.READ_HEART_RATE",
+            "android.permission.health.READ_ACTIVE_CALORIES_BURNED",
+            "android.permission.health.READ_TOTAL_CALORIES_BURNED",
+            "android.permission.health.READ_EXERCISE",
+            "android.permission.health.READ_RESPIRATORY_RATE",
+            "android.permission.health.READ_BLOOD_GLUCOSE",
+            "android.permission.health.READ_BLOOD_PRESSURE",
+            "android.permission.health.READ_BODY_TEMPERATURE",
+            "android.permission.health.READ_OXYGEN_SATURATION",
+            "android.permission.health.READ_WEIGHT",
+            "android.permission.health.READ_HEIGHT",
+            "android.permission.health.READ_BODY_FAT",
+            "android.permission.health.READ_RESTING_HEART_RATE"
+          ]
+        }
+      ],
+      [
+        "@kingstinct/react-native-healthkit",
+        {
+          "NSHealthShareUsageDescription": "SleepFactor needs access to your health data to analyze how your habits affect your sleep quality.",
+          "NSHealthUpdateUsageDescription": "SleepFactor needs to write sleep data to help track your sleep patterns.",
+          "background": false
+        }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "compileSdkVersion": 35,
+            "targetSdkVersion": 34,
+            "minSdkVersion": 26
+          }
+        }
+      ]
+    ]
   }
 }
