--- a/package.json
+++ b/package.json
@@ -4,30 +4,39 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-community/slider": "^5.0.1",
+    "@kingstinct/react-native-healthkit": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/slider": "5.0.1",
     "@react-navigation/bottom-tabs": "^7.8.11",
     "@react-navigation/native": "^7.1.24",
     "@react-navigation/native-stack": "^7.8.5",
     "@supabase/supabase-js": "^2.86.0",
-    "expo": "~54.0.27",
+    "expo": "~54.0.29",
     "expo-auth-session": "^7.0.10",
-    "expo-constants": "~18.0.11",
+    "expo-build-properties": "^1.0.10",
+    "expo-constants": "~18.0.12",
+    "expo-health-connect": "^0.1.1",
     "expo-linking": "^8.0.10",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "^15.0.10",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-draggable-flatlist": "^4.0.3",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-health-connect": "^3.5.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0"
   },
   "private": true,
   "devDependencies": {
+    "babel-preset-expo": "^54.0.8",
     "supabase": "^2.64.2"
   }
 }
