--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sleepfactor",
-  "version": "1.0.60",
+  "version": "1.0.61",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -29,6 +29,7 @@
     "react-native": "0.81.5",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-gifted-charts": "^1.4.70",
     "react-native-health-connect": "^3.5.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
