--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sleepfactor",
-  "version": "1.1.0",
+  "version": "1.1.19",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^15.0.3",
     "@kingstinct/react-native-healthkit": "^13.0.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.5.1",
     "@react-native-community/slider": "5.0.1",
     "@react-navigation/bottom-tabs": "^7.8.11",
     "@react-navigation/native": "^7.1.24",
@@ -28,13 +29,16 @@
     "expo-web-browser": "^15.0.10",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.70",
     "react-native-health-connect": "^3.5.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.1",
+    "react-native-wheel-pick": "^1.2.6"
   },
   "private": true,
   "devDependencies": {
