Improve insights page: custom SVG scatter plots, trend lines, axis labels, and performance fixes
- Replaced react-native-chart-kit with custom SVG scatter plot implementation
- Added line of best fit (dashed trend line) to scatter plots
- Implemented logical axis labels (nice rounded numbers instead of raw values)
- Added axis titles (X and Y axis labels) for clarity
- Fixed container width issues - made insight cards responsive to screen width
- Fixed NaN value handling in chart components
- Removed excessive console logging from DrugLevelChart
- Fixed sleep sync when enabling automatic health tracking
- Improved data validation and error handling throughout insights pipeline
- Version bump to 1.1.40

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sleepfactor",
-  "version": "1.1.19",
+  "version": "1.1.40",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -38,7 +38,8 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.1",
-    "react-native-wheel-pick": "^1.2.6"
+    "react-native-wheel-pick": "^1.2.6",
+    "victory-native": "^41.20.2"
   },
   "private": true,
   "devDependencies": {
