--- a/app.json
+++ b/app.json
@@ -3,11 +3,11 @@
     "name": "SleepFactor",
     "slug": "SleepFactor",
     "scheme": "sleepfactor",
-    "version": "1.1.19",
+    "version": "1.1.23",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
