--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": false,
+    "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -86,6 +86,12 @@
           }
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "430fa5de-f870-4b36-99b7-f5563e95a1f2"
+      }
+    },
+    "owner": "jyriad"
   }
 }
