--- a/app.json
+++ b/app.json
@@ -82,7 +82,11 @@
           "android": {
             "compileSdkVersion": 35,
             "targetSdkVersion": 34,
-            "minSdkVersion": 26
+            "minSdkVersion": 26,
+            "package": process.env.EAS_BUILD_PROFILE === "development" ? "com.sleepfactor.app.dev" : "com.sleepfactor.app"
+          },
+          "ios": {
+            "bundleIdentifier": process.env.EAS_BUILD_PROFILE === "development" ? "com.sleepfactor.app.dev" : "com.sleepfactor.app"
           }
         }
       ]
