Prepare for APK builds: Update app config for dev/production variants

--- a/eas.json
+++ b/eas.json
@@ -1,20 +1,20 @@
 {
   "cli": {
-    "version": ">= 5.9.0"
+    "version": ">= 5.9.0",
+    "appVersionSource": "local"
   },
   "build": {
     "development": {
+      "developmentClient": true,
+      "distribution": "internal",
       "android": {
-        "buildType": "apk",
-        "package": "com.sleepfactor.app.dev"
-      },
-      "ios": {
-        "bundleIdentifier": "com.sleepfactor.app.dev"
+        "buildType": "app-bundle"
       }
     },
     "production": {
+      "channel": "production",
       "android": {
-        "buildType": "aab"
+        "buildType": "apk"
       }
     }
   },
