--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/vector-icons": "^15.0.3",
     "@kingstinct/react-native-healthkit": "^13.0.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "^8.5.1",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/slider": "5.0.1",
     "@react-navigation/bottom-tabs": "^7.8.11",
     "@react-navigation/native": "^7.1.24",
@@ -39,7 +39,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.15.1",
+    "react-native-svg": "15.12.1",
     "react-native-wheel-pick": "^1.2.6",
     "victory-native": "^41.20.2"
   },
