--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "SleepFactor",
     "slug": "SleepFactor",
     "scheme": "sleepfactor",
-    "version": "1.2.8",
+    "version": "1.2.9",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -99,6 +99,13 @@
             "targetSdkVersion": 34,
             "minSdkVersion": 26
           }
+        }
+      ],
+      [
+        "react-native-svg",
+        {
+          "native": true,
+          "svgr": false
         }
       ]
     ],
