Replace victory-native with react-native-gifted-charts for working charts
- Victory-native doesn't export components correctly in Expo setup
- Replace with react-native-gifted-charts LineChart configured as scatter plot
- Use LineChart with hideDataPoints=false to show scatter points
- Add proper axis labels and styling
- Charts now render without errors
- Update version to 1.2.10

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@expo/cli": "^54.0.20",
     "babel-preset-expo": "^54.0.8",
     "eas-cli": "^16.28.0",
+    "react-native-svg-transformer": "^1.5.2",
     "supabase": "^2.64.2"
   }
 }
