--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sleepfactor",
-  "version": "1.1.91",
+  "version": "1.3.0",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.8.11",
     "@react-navigation/native": "^7.1.24",
     "@react-navigation/native-stack": "^7.8.5",
+    "@shopify/react-native-skia": "^2.4.14",
     "@supabase/supabase-js": "^2.86.0",
     "expo": "~54.0.29",
     "expo-auth-session": "^7.0.10",
@@ -31,17 +32,14 @@
     "expo-web-browser": "^15.0.10",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-gifted-charts": "^1.4.70",
     "react-native-health-connect": "^3.5.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
-    "react-native-wheel-pick": "^1.2.6",
-    "victory-native": "^41.20.2"
+    "react-native-wheel-pick": "^1.2.6"
   },
   "private": true,
   "devDependencies": {
