--- a/eas.json
+++ b/eas.json
@@ -5,6 +5,7 @@
   },
   "build": {
     "development": {
+      "node": "20",
       "developmentClient": true,
       "distribution": "internal",
       "android": {
@@ -12,6 +13,7 @@
       }
     },
     "production": {
+      "node": "20",
       "channel": "production",
       "android": {
         "buildType": "apk"
