--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "react-native-svg": "15.12.1",
     "react-native-wheel-pick": "^1.2.6"
   },
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "private": true,
   "devDependencies": {
     "@expo/cli": "^54.0.20",
